fix alignment of vertical slides

--- a/src/keen-slider.scss
+++ b/src/keen-slider.scss
@@ -1,4 +1,5 @@
 .keen-slider:not([data-keen-slider-disabled]) {
+  align-content: flex-start;
   display: flex;
   overflow: hidden;
   position: relative;
